fix: featureのgapが広すぎたので0.4emから0.2emに修正

--- a/src/css/object/project/features.scss
+++ b/src/css/object/project/features.scss
@@ -29,12 +29,12 @@
     gap: 40px;
     @include mixin.tab {
       margin-top: 0.53rem;
-      gap: 0.4rem;
+      justify-content: center;
+      gap: 0.2rem;
     }
     @include mixin.sp {
       margin-top: 0.38rem;
       gap: 0.2rem;
-      justify-content: center;
     }
   }
 
